max-width fix for mobile overflow

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,6 @@
-body {
-  overflow-x: hidden;
+html, body {
+    overflow-x: hidden;
+    max-width: 100%;
 }
 /*
 * ----------------------------------------------------------------------------------------
